Add filtro ao aplicativo

--- a/desafioSerttel/desafioSerttel/StoryBoards/Home.storyboard
+++ b/desafioSerttel/desafioSerttel/StoryBoards/Home.storyboard
@@ -33,17 +33,30 @@
                     <view key="view" contentMode="scaleToFill" id="zmd-k1-3Vb">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="CFi-46-ShG">
+                                <rect key="frame" x="290" y="593" width="69" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Filter"/>
+                                <connections>
+                                    <action selector="changeMarkers:" destination="Alh-Ss-l9t" eventType="touchUpInside" id="i4c-A3-AjE"/>
+                                </connections>
+                            </button>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <viewLayoutGuide key="safeArea" id="4oX-8X-UX4"/>
                     </view>
+                    <toolbarItems/>
                     <navigationItem key="navigationItem" id="bp2-Fi-Mw4"/>
+                    <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
                     <connections>
+                        <outlet property="bnt" destination="CFi-46-ShG" id="88T-6E-V3v"/>
                         <segue destination="ovC-0p-QRs" kind="push" identifier="datailsSegue" id="neG-BN-BqZ"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="981-rg-evD" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-3098" y="-1492"/>
+            <point key="canvasLocation" x="-3098.4000000000001" y="-1492.8035982008996"/>
         </scene>
         <!--Details-->
         <scene sceneID="PkU-RZ-NB5">
